<resources>
    <string name="app_name">"MSUT"</string>
    <string name="app_extends">ร้านซ่อมรถจักรยานยนต์ มทส.</string>
    <string name="first_name">ชื่อ</string>
    <string name="last_name">นามสกุล</string>
    <string name="full_name">ชื่อ-สกุล</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน (อย่างน้อย 6 ตัว)</string>
    <string name="password_confirm">ยืนยันรหัสผ่าน</string>
    <string name="minimum_six_letter">อย่างน้อย 6 ตัว</string>
    <string name="fill_first_name">กรอกชื่อ</string>
    <string name="fill_last_name">กรอกนามสกุล</string>
    <string name="fill_email">กรอกอีเมล</string>
    <string name="fill_password">กรอกรหัสผ่าน</string>
    <string name="fill_old_pass">กรอกรหัสผ่านเดิม</string>
    <string name="forget_password"><u>ลืมรหัสผ่าน?</u></string>
    <string name="hint_old_password">รหัสผ่านเดิม</string>
    <string name="hint_new_password">รหัสผ่านใหม่</string>
    <string name="hint_new_password_confirm">ยืนยันรหัสผ่านใหม่</string>
    <string name="change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="email_invalid">อีเมลไม่ถูกต้อง!</string>
    <string name="minimum_password">รหัสผ่านสั้นเกินไป, รหัสผ่านอย่างน้อย 6 ตัว!</string>
    <string name="hint_email">อีเมล</string>
    <string name="hint_password">รหัสผ่าน</string>
    <string name="btn_link_register">ลงทะเบียน</string>
    <string name="txt_before_reset_password">กรอกอีเมลด้านล่างนี้ ระบบจะส่ง link เพื่อทำการเปลี่ยนรหัสผ่านไปให้คุณทางอีเมล</string>
    <string name="txt_net_alert">เครือข่ายมีปัญหา! ไม่สามารถโหลดข้อมูลได้\nกดตรงนี้เพื่อลองอีกครั้ง</string>
    <string name="title_activity_maps">แผนที่</string>
    <string name="nothing_to_show">ไม่มีรายการแสดง</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="about_us_with_underline"><u>เกี่ยวกับเรา</u></string>
    <string name="instruction_with_underline"><u>วิธีใช้งาน</u></string>
    <string name="for_user">สำหรับผู้ใช้งานทั่วไป</string>
    <string name="for_store">สำหรับเจ้าของร้าน</string>
    <string name="for_store_click">สำหรับเจ้าของร้านคลิกที่นี่</string>
    <string name="call">การโทร</string>
    <string name="chat">การแชท</string>
    <string name="date">วันที่</string>
    <string name="stats_month">สถิติของเดือน</string>
    <string name="print">พิมพ์ข้อความ&#8230;</string>
    <string name="work_time">เวลาทำการ</string>
    <string name="services">บริการ</string>
    <string name="distribute">จำหน่าย</string>
    <string name="edit_with_underline"><u>[แก้ไข]</u></string>
    <string name="store_name">ชื่อร้าน</string>
    <string name="store_position">ที่ตั้งร้าน</string>
    <string name="monday_friday">วันจันทร์-ศุกร์</string>
    <string name="saturday_sunday">วันเสาร์-อาทิตย์</string>
    <string name="vacation">ช่วงปิดเทอม</string>
    <string name="gps_store">ตำแหน่ง GPS ร้าน</string>
    <string name="on_map"><u>ดูตำแหน่ง</u></string>
    <string name="tel">เบอร์โทร</string>
    <string name="save">บันทึก</string>
    <string name="edit_data">แก้ไขข้อมูล</string>
    <string name="sel_img">เลือกรูปภาพ</string>
    <string name="update_cover">เปลี่ยนรูปปก</string>
    <string name="update_profile">เปลี่ยนรูปโปรไฟล์</string>
    <string name="add_service">เพิ่มร้าน</string>
    <string name="store">ร้าน</string>
    <string name="facebook_login">เข้าสู่ระบบด้วย Facebook</string>
    <string name="status">สถานะร้าน</string>
    <string name="open">เปิดร้าน</string>
    <string name="close">ปิดร้าน</string>
    <string name="review">รีวิว</string>
    <string name="review_store">รีวิวร้าน</string>
    <string name="service_pro"><u>ดูโปรไฟล์ร้าน</u></string>
    <string name="user_review">เขียนรีวิว</string>
    <string name="edit_post">แก้ไขโพสต์</string>
    <string name="del_post">ลบโพสต์</string>
    <string name="post">โพสต์</string>
    <string name="image">รูปภาพ</string>
    <string name="ok">ตกลง</string>
    <string name="cancel">ยกเลิก</string>

    <string-array name="month">
        <item>มกราคม</item>
        <item>กุมภาพันธ์</item>
        <item>มีนาคม</item>
        <item>เมษายน</item>
        <item>พฤษภาคม</item>
        <item>มิถุนายน</item>
        <item>กรกฎาคม</item>
        <item>สิงหาคม</item>
        <item>กันยายน</item>
        <item>ตุลาคม</item>
        <item>พฤศจิกายน</item>
        <item>ธันวาคม</item>
    </string-array>

    <string-array name="short_month">
        <item>ม.ค.</item>
        <item>ก.พ.</item>
        <item>มี.ค.</item>
        <item>เม.ย.</item>
        <item>พ.ค.</item>
        <item>มิ.ย.</item>
        <item>ก.ค.</item>
        <item>ส.ค.</item>
        <item>ก.ย.</item>
        <item>ต.ค.</item>
        <item>พ.ย.</item>
        <item>ธ.ค.</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_profile">โปรไฟล์</string>
    <string name="tab_chat">แชท</string>
    <string name="tab_timeline">ไทม์ไลน์</string>
    <string name="tab_add_store">เพิ่มร้าน</string>
    <string name="tab_stats">สถิติ</string>
    <string name="tab_review">รีวิว</string>
    <string name="tab_store">ร้านต่างๆ</string>
    <string name="default_latlng">14.8823047,102.0206782</string>
    <string name="default_time_work">วันจันทร์–ศุกร์ เวลา 08:00–12:00, 13:00–20:00 น. วันเสาร์–อาทิตย์ เวลา 08:00–12:00 น. ปิดเทอม เวลา 09:00-17:00 น.</string>
    <string name="send_image_complete">ส่งรูปภาพเรียบร้อย</string>
    <string name="send_image_problem">การส่งรูปภาพมีปัญหา! โปรดลองอีกครั้ง</string>
    <string name="fault_network_cannot_send_message">ข้อผิดพลาดเครือข่าย! ไม่สามารถส่งข้อความได้</string>
    <string name="fault_network_cannot_send_image">ข้อผิดพลาดเครือข่าย! ไม่สามารถส่งรูปภาพได้</string>
    <string name="sending_image">กำลังส่งรูปภาพ กรุณารอสักครู่…</string>
    <string name="cannot_load_data">โหลดข้อมูลไม่ได้! โปรดลองอีกครั้ง</string>
    <string name="push_btn_to_call_phone">กดปุ่มด้านล่างเพื่อโทรหา</string>
    <string name="suggest_open_gps">ในการดำเนินการต่อ ให้อุปกรณ์เปิดตำแหน่ง (GPS)</string>
    <string name="device_not_support_gps">อุปกรณ์ไม่รองรับระบบ GPS</string>
    <string name="send">ส่ง</string>
    <string name="send_image">ส่งรูปภาพ</string>

    <string-array name="tab_store">
        <item>แชท</item>
        <item>ไทม์ไลน์</item>
        <item>สถิติ</item>
        <item>รีวิว</item>
        <item>โปรไฟล์</item>
    </string-array>

    <string-array name="tab_user">
        <item>ร้านต่างๆ</item>
        <item>แชท</item>
        <item>ไทม์ไลน์</item>
        <item>รีวิว</item>
        <item>โปรไฟล์</item>
    </string-array>
</resources>
