<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context="com.darker.motorservice.ui.update_password.UpdatePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint_old_password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_white"
            android:gravity="center"
            android:hint="@string/fill_old_pass"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/hint_new_password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_white"
            android:gravity="center"
            android:hint="@string/min"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/hint_new_password_confirm"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_white"
            android:gravity="center"
            android:hint="@string/min"
            android:imeOptions="normal"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/color_cursor" />

        <Button
            android:id="@+id/btn_save"
            android:paddingStart="@dimen/btn"
            android:paddingEnd="@dimen/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_teal"
            android:onClick="onUpdatePasswordClicked"
            android:text="@string/change_password"
            android:textColor="@color/white" />
    </LinearLayout>

    <include layout="@layout/progressbar"/>
</RelativeLayout>